--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 h1,
-p {
+p { -ms-hyphenate-limit-chars: FF;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
